# leginon

./: .gitattributes  configcheck.bat  launcher.bat  py2.bat  pyproject.toml  start.bat  syscheck.bat  tcptest_server.bat
etc/: env  git-version.txt  version  version.txt
pyscope/autoit/: BeamstopIn.au3  BeamstopOut.au3  TiaExportSeries.au3
sbin/: env  update
