[tool.poetry]
name = "leginon-manager"
version = "0.1.0"
description = ""
authors = ["semcit <semcit@nysbc.org>"]

# sudo apt install libgtk-3-dev
[tool.poetry.dependencies]
python = "2.7.18"
numpy = "^1.16.6"
scipy = "^1.2.3"
pillow = "^6.2.2"
pymysql = "^0.10.1"
attrdict = "^2.0.1"
wxpython = "2.6.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
